[gd_scene load_steps=3 format=3 uid="uid://cmvwkbyac5f34"]

[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_6f438"]
[ext_resource type="Texture2D" uid="uid://c1bhqstdswsgx" path="res://assets/black.png" id="1_mdea3"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6f438")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(585, 325)
scale = Vector2(1.09809, 1.06944)
texture = ExtResource("1_mdea3")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_top = 28.0
offset_right = 45.0
offset_bottom = 51.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 128
text = "Game Over"

[node name="PlayerWinsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 338.0
offset_top = 457.0
offset_right = 403.0
offset_bottom = 488.0
text = "Restart"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 679.0
offset_top = 457.0
offset_right = 775.0
offset_bottom = 488.0
text = "Main Menu
"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
